[gd_scene load_steps=2 format=3 uid="uid://djwjk3dk03tnc"]

[ext_resource type="Script" path="res://Scenes/Enemies/enemy_base.gd" id="1_jdura"]

[node name="EnemyBase" type="CharacterBody2D" groups=["Moveables"]]
collision_layer = 0
script = ExtResource("1_jdura")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.75, 0.75)

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_enabler_2d_screen_entered"]
[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
